--- a/P2Pproject/web/registration.css
+++ b/P2Pproject/web/registration.css
@@ -1,6 +1,7 @@
 body{
     background-color: #f1f1f1;
     font-size: 25px;
+    margin: 0;
 }
 
 #header{
@@ -26,6 +27,8 @@ body{
 #button1{
     background-color: #ffffff;
     cursor: pointer;
+    border-radius: 5px; 
+    font-size: 20px;
 }
 
 #regForm{
