--- a/P2Pproject/web/index.css
+++ b/P2Pproject/web/index.css
@@ -11,11 +11,6 @@ body{
     margin: 40px 0px 0px 10px;
 }
 
-#header a{
-    text-decoration: none;
-    color: #000000;
-}
-
 #headerlogo{
     margin-left: 0%;
     float: left;
@@ -31,12 +26,23 @@ body{
 
 #logout{
     float: right;
-    font-size: 20px;
     margin-top: 40px;
     margin-right: 5%;
+    font-size: 20px;
     cursor: pointer;
     border-radius: 5px; 
-    background-color: #ffffff;
+    background-color: #ffffff; 
 }
 
+#link{
+    background-color: #3b5998;
+}
+
+#link a{
+    text-decoration: none;
+}
+
+#main{
+    float: right;
+}
 
