--- a/P2Pproject/web/registration.css
+++ b/P2Pproject/web/registration.css
@@ -23,7 +23,12 @@ body{
     color: #ffffff;
 }
 
-
+#button1{
+    background-color: #ffffff;
+    cursor: pointer;
+    border-radius: 5px; 
+    font-size: 20px;
+}
 
 #regForm{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
