--- a/P2Pproject/web/Form.css
+++ b/P2Pproject/web/Form.css
@@ -1,32 +1,82 @@
 body{
     background-color: #f1f1f1;
-    font-size: 25px;
-}
-
-h1{
-    font-size: 45px;
+    /*font-size: 25px;*/
+    margin: 0;
 }
 
 #header{
-    background-color: #3b5998;
-    width: 100%;
-    height: 90px;
-    margin: 40px 0px 0px 10px;
+	background-color: #3b5998;
+	width: 100%;
+	height: 90px;
+	margin-right: 0px;
+	margin-left: 0px;
+	margin-bottom: 0px;
 }
 
-a{
-    text-decoration: none;
+#headerlogo{
+    margin-left: 0%;
+    float: left;
+}
+
+#headeruser{
+    float: left;
     color: #ffffff;
-    border: none;
-    padding: 10px 20px;
     font-size: 25px;
-    cursor: pointer;
-    background-color: #8b9dc3;
-    border-radius: 5px;
+    margin-top: 40px;
+    margin-left: 15%;
 }
 
-a:hover{
-    opacity: 0.8;
+#logout{
+    float: right;
+    margin-top: 40px;
+    margin-right: 5%;
+    font-size: 20px;
+    cursor: pointer;
+    border-radius: 5px; 
+    background-color: #ffffff; 
+}
+
+/*#link{
+    background-color: #3b5998;
+}*/
+
+#LeftMenu{
+	background-color: #EBE8E8;
+	width: 20%;
+    height: 100%;
+	float: left;
+}
+
+#main{
+	background-color: #FFFFFF;
+	width: 60%;
+	height: 100%;
+	float: left;
+}
+
+#RightBody{
+	background-color: #EBE8E8;
+	height: 100%;
+	width: 20%;
+	float: right;
+}
+
+#FunctionBox01{
+	background-color: #FFFFFF;
+	border: 5px Solid #EBE8E8;
+}
+
+#FunctionBox02{
+	background-color: #FFFFFF;
+	border: 5px Solid #EBE8E8;
+}
+
+#link a{
+    text-decoration: none;
+}
+
+#container{
+
 }
 
 #form{
@@ -39,4 +89,15 @@ a:hover{
     border-radius: 5px;
     text-align: center;
     font-size: 25px;
+}
+
+a{
+    text-decoration: none;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 25px;
+    cursor: pointer;
+    background-color: #8b9dc3;
+    border-radius: 5px;
 }
