--- a/P2Pproject/web/index.css
+++ b/P2Pproject/web/index.css
@@ -1,14 +1,16 @@
 body{
     background-color: #f1f1f1;
-    font-size: 25px;
+    /*font-size: 25px;*/
     margin: 0;
 }
 
 #header{
-    background-color: #3b5998;
-    width: 100%;
-    height: 90px;
-    margin: 40px 0px 0px 10px;
+	background-color: #3b5998;
+	width: 100%;
+	height: 90px;
+	margin-right: 0px;
+	margin-left: 0px;
+	margin-bottom: 0px;
 }
 
 #headerlogo{
@@ -34,15 +36,45 @@ body{
     background-color: #ffffff; 
 }
 
-#link{
+/*#link{
     background-color: #3b5998;
+}*/
+
+#LeftMenu{
+	background-color: #EBE8E8;
+	width: 20%;
+    height: 100%;
+	float: left;
+}
+
+#main{
+	background-color: #FFFFFF;
+	width: 60%;
+	height: 100%;
+	float: left;
+}
+
+#RightBody{
+	background-color: #EBE8E8;
+	height: 100%;
+	width: 20%;
+	float: right;
+}
+
+#FunctionBox01{
+	background-color: #FFFFFF;
+	border: 5px Solid #EBE8E8;
+}
+
+#FunctionBox02{
+	background-color: #FFFFFF;
+	border: 5px Solid #EBE8E8;
 }
 
 #link a{
     text-decoration: none;
 }
 
-#main{
-    float: right;
-}
+#container{
 
+}
