--- a/P2Pproject/web/registration.css
+++ b/P2Pproject/web/registration.css
@@ -4,10 +4,12 @@ body{
 }
 
 #header{
-    background-color: #3b5998;
-    width: 100%;
-    height: 90px;
-    margin: 40px 0px 0px 10px;
+	background-color: #3b5998;
+	width: 100%;
+	height: 90px;
+	margin-right: 0px;
+	margin-left: 0px;
+	margin-bottom: 0px;
 }
 
 #headerlogo{
@@ -67,3 +69,33 @@ h1{
     opacity: 0.8;
 }
 
+#LeftMenu{
+	background-color: #EBE8E8;
+	width: 20%;
+    height: 100%;
+	float: left;
+}
+
+#main{
+	background-color: #FFFFFF;
+	width: 60%;
+	height: 100%;
+	float: left;
+}
+
+#RightBody{
+	background-color: #EBE8E8;
+	height: 100%;
+	width: 20%;
+	float: right;
+}
+
+#FunctionBox01{
+	background-color: #FFFFFF;
+	border: 5px Solid #EBE8E8;
+}
+
+#FunctionBox02{
+	background-color: #FFFFFF;
+	border: 5px Solid #EBE8E8;
+}
